# ChangeLog for dev-python/gst-python
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/ChangeLog,v 1.21 2006/07/21 21:58:52 mr_bones_ Exp $

  21 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  gst-python-0.10.4.ebuild, gst-python-0.10.5.ebuild:
  fix invalid dep atom

*gst-python-0.10.5 (21 Jul 2006)

  21 Jul 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  gst-python-0.10.4.ebuild, +gst-python-0.10.5.ebuild:
  version bump

  16 Jul 2006; Alastair Tse <liquidx@gentoo.org> -gst-python-0.8.1.ebuild,
  -gst-python-0.8.2.ebuild, -gst-python-0.10.0.ebuild,
  -gst-python-0.10.1.ebuild, -gst-python-0.10.2.ebuild,
  -gst-python-0.10.3.ebuild:
  old ebuild cleanups

  12 Jun 2006; Jason Wever <weeve@gentoo.org> gst-python-0.10.4.ebuild:
  Added ~sparc keyword wrt bug #130382.

  06 Jun 2006; Carsten Lohrke <carlo@gentoo.org> gst-python-0.10.1.ebuild,
  gst-python-0.10.2.ebuild, gst-python-0.10.3.ebuild,
  gst-python-0.10.4.ebuild:
  Fix use of nonexistent versioned virtual/python.

  06 Jun 2006; Carsten Lohrke <carlo@gentoo.org> gst-python-0.10.1.ebuild,
  gst-python-0.10.2.ebuild, gst-python-0.10.3.ebuild,
  gst-python-0.10.4.ebuild:
  Fix use of nonexistent versioned virtual/python.

*gst-python-0.10.4 (02 May 2006)

  02 May 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gst-python-0.10.4.ebuild:
  version bump

  26 Apr 2006; Luca Barbato <lu_zero@gentoo.org> gst-python-0.10.3.ebuild:
  Marked ~ppc

  13 Apr 2006; Thomas Cort <tcort@gentoo.org> gst-python-0.10.3.ebuild:
  Added ~alpha keyword.

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> gst-python-0.10.3.ebuild:
  Mark 0.10.3 ~ia64

*gst-python-0.10.3 (22 Mar 2006)

  22 Mar 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gst-python-0.10.3.ebuild:
  version bump

*gst-python-0.8.4 (11 Mar 2006)

  11 Mar 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +gst-python-0.8.4.ebuild:
  Version bump from upstream
