@@ -1,0 +1,3 @@
+MD5 d604b70d7d20584a02045124a6a00cf0 gst-python-0.10.6.tar.gz 576427
+RMD160 28c89e59b339393d87d01ad4be63f028dab6636e gst-python-0.10.6.tar.gz 576427
+SHA256 2363bb250c03266687190c6ab7d0504c107a16dc841818d5a7fc9c5ac9fb394c gst-python-0.10.6.tar.gz 576427
