@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/gst-python
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/ChangeLog,v 1.21 2006/07/21 21:58:52 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/ChangeLog,v 1.22 2006/12/07 15:18:56 zaheerm Exp $
+
+*gst-python-0.10.6 (07 Dec 2006)
+
+  07 Dec 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
+  +gst-python-0.10.6.ebuild:
+  version bump
 
   21 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
   gst-python-0.10.4.ebuild, gst-python-0.10.5.ebuild:
